KAS-4579 Refactor auk-label class instances (part 1)

--- a/app/components/agenda/agendaitem/agendaitem-decision-edit.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision-edit.hbs
@@ -4,7 +4,7 @@
   class="auk-o-flex auk-o-flex--vertical-center"
   ...attributes
 >
-  <Auk::Label class="auk-u-sr-only">{{t "result-decision"}}</Auk::Label>
+  <AuLabel class="auk-u-sr-only">{{t "result-decision"}}</AuLabel>
   <Decision::DecisionResultSelect
     @selected={{this.decisionActivity.decisionResultCode}}
     @onChange={{this.changeDecisionResultCode}}
