--- a/app/components/cases/edit-case.hbs
+++ b/app/components/cases/edit-case.hbs
@@ -7,7 +7,7 @@
   <Auk::Modal::Body>
     <div class="au-c-form">
       <AuFormRow>
-        <Auk::Label>{{t "short-title-case"}}</Auk::Label>
+        <AuLabel>{{t "short-title-case"}}</AuLabel>
         <AuTextarea
           data-test-edit-case-shorttitle
           value={{this.shortTitle}}
