--- a/app/components/cases/subcases/proposable-agendas-modal.hbs
+++ b/app/components/cases/subcases/proposable-agendas-modal.hbs
@@ -7,7 +7,7 @@
   <Auk::Modal::Body>
     <div class="au-c-form">
       <AuFormRow>
-        <Auk::Label for="new-subcase-ok">{{t "formal-ok"}}</Auk::Label>
+        <AuLabel for="new-subcase-ok">{{t "formal-ok"}}</AuLabel>
         <AuToggleSwitch
           data-test-proposable-agendas-modal-toggle-formally-ok
           id="new-subcase-ok"
@@ -16,7 +16,7 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label for="remarks">{{t "private-comments-title"}}</Auk::Label>
+        <AuLabel for="remarks">{{t "private-comments-title"}}</AuLabel>
         <AuTextarea
           id="remarks"
           rows="4"
