--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -332,7 +332,7 @@
 >
   <:body>
     {{#if this.newPiece}}
-      <Auk::Label>{{t "name"}}</Auk::Label>
+      <AuLabel>{{t "name"}}</AuLabel>
       <AuInput
         value={{this.newPiece.name}}
         @width="block"
