--- a/app/components/mandatees/mandatee-person-selector.hbs
+++ b/app/components/mandatees/mandatee-person-selector.hbs
@@ -1,8 +1,8 @@
 <AuFormRow>
   {{#if @showLabel}}
-    <Auk::Label>
+    <AuLabel>
       {{t "ministers"}}
-    </Auk::Label>
+    </AuLabel>
   {{/if}}
     {{#if @multiple}}
       <PowerSelectMultiple
