--- a/app/components/mandatees/mandatees-selector-modal.hbs
+++ b/app/components/mandatees/mandatees-selector-modal.hbs
@@ -25,7 +25,7 @@
       @isLoading={{this.onAdd.isRunning}}
       @reserveSpace={{true}}
     >
-      <Auk::Label>{{t "minister"}}</Auk::Label>
+      <AuLabel>{{t "minister"}}</AuLabel>
       <Mandatees::MandateeSelector
         @excludeMandatees={{@excludeMandatees}}
         @referenceDate={{@referenceDate}}
