--- a/app/components/meeting/document-publication-planning-modal.hbs
+++ b/app/components/meeting/document-publication-planning-modal.hbs
@@ -11,9 +11,9 @@
     >
       <div class="au-c-form">
         <AuFormRow>
-          <Auk::Label>
+          <AuLabel>
             {{t "agenda-publication-internal-documents-question"}}
-          </Auk::Label>
+          </AuLabel>
           <div class="auk-o-flex">
             <Auk::Datepicker
               class="auk-o-flex__item"
@@ -34,9 +34,9 @@
           </div>
         </AuFormRow>
         <AuFormRow>
-          <Auk::Label>
+          <AuLabel>
             {{t "agenda-publication-website-question"}}
-          </Auk::Label>
+          </AuLabel>
           <div class="auk-o-flex">
             <Auk::Datepicker
               class="auk-o-flex__item"
