--- a/app/components/meeting/edit-meeting-modal.hbs
+++ b/app/components/meeting/edit-meeting-modal.hbs
@@ -13,9 +13,9 @@
       />
       {{#if this.isAnnexMeeting}}
         <AuFormRow>
-          <Auk::Label>
+          <AuLabel>
             {{t "related-main-meeting-field-label"}}
-          </Auk::Label>
+          </AuLabel>
           <Utils::ModelSelector
             data-test-edit-meeting-related-main-meeting
             @modelName="meeting"
@@ -35,7 +35,7 @@
         </AuFormRow>
       {{else}}
         <AuFormRow data-test-edit-meeting-datepicker>
-          <Auk::Label>{{t "start-date"}}</Auk::Label>
+          <AuLabel>{{t "start-date"}}</AuLabel>
           <Auk::Datepicker
             @enableTime={{true}}
             @date={{this.startDate}}
@@ -45,9 +45,9 @@
       {{/if}}
       {{!Publicatiedatum}}
       <AuFormRow data-test-edit-meeting-document-publication-date>
-        <Auk::Label>
+        <AuLabel>
           {{t "date-publication-documents"}}
-        </Auk::Label>
+        </AuLabel>
         <Auk::Datepicker
           @enableTime={{true}}
           @date={{this.plannedDocumentPublicationDate}}
@@ -60,9 +60,9 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label>
+        <AuLabel>
           {{t "meeting-number"}}
-        </Auk::Label>
+        </AuLabel>
         <div class="auk-o-flex">
           {{#unless this.isAnnexMeeting}}
             <AuInput
@@ -120,9 +120,9 @@
       {{#if (not this.isPreKaleidos)}}
         <AuFormRow data-test-edit-meeting-secretary>
           <div class="auk-input-group--w-large">
-            <Auk::Label>
+            <AuLabel>
               {{t "secretary-for-meeting"}}
-            </Auk::Label>
+            </AuLabel>
             <Mandatees::MandateeSelector
               @onSelectMandatee={{fn (mut this.secretary)}}
               @selectedMandatees={{this.secretary}}
@@ -133,9 +133,9 @@
       {{/if}}
       {{#unless this.isAnnexMeeting}}
         <AuFormRow>
-          <Auk::Label>
+          <AuLabel>
             {{t "meeting-location"}}
-          </Auk::Label>
+          </AuLabel>
           <AuInput
             data-test-edit-meeting-meeting-location
             value={{this.extraInfo}}
