--- a/app/components/organization-filter.hbs
+++ b/app/components/organization-filter.hbs
@@ -1,4 +1,4 @@
-<Auk::Label>{{t "filter-on-organization"}}</Auk::Label>
+<AuLabel>{{t "filter-on-organization"}}</AuLabel>
 <div class="au-u-flex au-u-flex--spaced-tiny">
   <div class="au-u-1-1">
     <PowerSelect
