--- a/app/components/publications/publication-status-modal.hbs
+++ b/app/components/publications/publication-status-modal.hbs
@@ -7,7 +7,7 @@
   <Auk::Modal::Body>
     <div class="au-c-form">
       <AuFormRow>
-        <Auk::Label for="blockInput">{{t "status"}}</Auk::Label>
+        <AuLabel for="blockInput">{{t "status"}}</AuLabel>
         <PowerSelect
           data-test-publication-status-select
           @options={{this.publicationStatusses}}
