--- a/app/components/publications/publication/case/remark/remark-panel.hbs
+++ b/app/components/publications/publication/case/remark/remark-panel.hbs
@@ -32,13 +32,13 @@
       >
         <div class="au-c-form">
           <AuFormRow>
-            <Auk::Label>
+            <AuLabel>
               <span>{{t "remarks"}}</span>
               {{!(i) inside label to maintain Auk:Label's layout}}
               <Utils::Generic::TooltipHelp>
                 {{t "publication-remark-help"}}
               </Utils::Generic::TooltipHelp>
-            </Auk::Label>
+            </AuLabel>
             <AuTextarea
               data-test-remark-panel-textarea
               rows="12"
