--- a/app/components/publications/publication/publication-activities/publication-edit-modal.hbs
+++ b/app/components/publications/publication/publication-activities/publication-edit-modal.hbs
@@ -11,9 +11,9 @@
     >
       <div class="au-c-form">
         <AuFormRow>
-          <Auk::Label for="publicationRegisterModal_publicationDate">
+          <AuLabel for="publicationRegisterModal_publicationDate">
             {{t "publication-date"}}
-          </Auk::Label>
+          </AuLabel>
           <Auk::Datepicker
             id="publicationRegisterModal_publicationDate"
             @date={{this.publicationDate}}
