--- a/app/components/publications/publication/publication-activities/publication-registration-modal.hbs
+++ b/app/components/publications/publication/publication-activities/publication-registration-modal.hbs
@@ -7,9 +7,9 @@
   <Auk::Modal::Body>
     <div class="au-c-form">
       <AuFormRow data-test-publication-registration-publication-date>
-        <Auk::Label for="publicationRegisterModal_publicationDate">
+        <AuLabel for="publicationRegisterModal_publicationDate">
           {{t "date"}}
-        </Auk::Label>
+        </AuLabel>
         <Auk::Datepicker
           id="publicationRegisterModal_publicationDate"
           @date={{this.publicationDate}}
