--- a/app/components/publications/publication/translations/translation-activity-edit-modal.hbs
+++ b/app/components/publications/publication/translations/translation-activity-edit-modal.hbs
@@ -7,9 +7,9 @@
   <Auk::Modal::Body>
     <div class="au-c-form">
       <AuFormRow>
-        <Auk::Label for="translationActivityEditEndDate">
+        <AuLabel for="translationActivityEditEndDate">
           {{t "date-received"}}
-        </Auk::Label>
+        </AuLabel>
         <Auk::Datepicker
           id="translationActivityEditEndDate"
           @date={{this.receivedDate}}
