--- a/app/components/publications/publication/translations/translation-upload-modal.hbs
+++ b/app/components/publications/publication/translations/translation-upload-modal.hbs
@@ -25,9 +25,9 @@
         </AuCheckbox>
       </AuFormRow>
       <AuFormRow data-test-translation-upload-received-date>
-        <Auk::Label for="translationUploadReceivedAtDate">
+        <AuLabel for="translationUploadReceivedAtDate">
           {{t "date-received"}}
-        </Auk::Label>
+        </AuLabel>
         <Auk::Datepicker
           id="translationUploadReceivedAtDate"
           @date={{this.receivedDate}}
