--- a/app/components/search/decision-result-filter.hbs
+++ b/app/components/search/decision-result-filter.hbs
@@ -1,4 +1,4 @@
-<Auk::Label>{{t "result-decision"}}</Auk::Label>
+<AuLabel>{{t "result-decision"}}</AuLabel>
 {{#if this.loadDecisionResultCodes.isRunning}}
   <Auk::Loader />
 {{else}}
