--- a/app/components/search/document-type-filter.hbs
+++ b/app/components/search/document-type-filter.hbs
@@ -1,7 +1,7 @@
 <div class="au-c-card au-o-box au-o-box--small">
   <div class="au-c-form">
     <AuFormRow>
-      <Auk::Label>{{t "document-type"}}</Auk::Label>
+      <AuLabel>{{t "document-type"}}</AuLabel>
       {{#if this.loadDocumentTypes.isRunning}}
         <Auk::Loader />
       {{else}}
