--- a/app/components/search/publication-statuses-filter.hbs
+++ b/app/components/search/publication-statuses-filter.hbs
@@ -1,4 +1,4 @@
-<Auk::Label>{{t "publication-status"}}</Auk::Label>
+<AuLabel>{{t "publication-status"}}</AuLabel>
 {{#if this.loadPublicationStatuses.isRunning}}
   <Auk::Loader />
 {{else}}
