--- a/app/components/utils/kind-selector.hbs
+++ b/app/components/utils/kind-selector.hbs
@@ -5,7 +5,7 @@
   </div>
 {{else}}
   <AuFormRow data-test-utils-kind-selector>
-    <Auk::Label>{{t "kind"}}</Auk::Label>
+    <AuLabel>{{t "kind"}}</AuLabel>
     <PowerSelect
       @options={{this.options}}
       @selected={{@selectedKind}}
