--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -18,7 +18,7 @@
             @onDateToClear={{set this "dateTo" undefined}}
           />
           <div class="au-c-card au-o-box au-o-box--small">
-            <Auk::Label>{{t "submitter"}}</Auk::Label>
+            <AuLabel>{{t "submitter"}}</AuLabel>
             <Search::MinisterFilter
               @selected={{this.submitters}}
               @onChange={{set this "submitters"}}
