--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -6,9 +6,9 @@
   >
     <AuFormRow class="au-u-3-4">
       <div class="auk-o-flex auk-o-flex--align-baseline">
-        <Auk::Label for="keyword" class="auk-u-mr">
+        <AuLabel for="keyword" class="auk-u-mr">
           {{capitalize (t "keyword")}}
-        </Auk::Label>
+        </AuLabel>
         <Utils::SearchTooltip />
       </div>
       <AuInput
