--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -5,7 +5,7 @@
       data-test-route-search-removed-cases-list
       class="au-c-card au-o-box au-o-box--small"
     >
-      <Auk::Label>{{t "removed-cases"}}</Auk::Label>
+      <AuLabel>{{t "removed-cases"}}</AuLabel>
       <AuRadioGroup
         @selected={{this.selectedArchivedOption}}
         @onChange={{this.onChangeArchivedOption}}
