--- a/app/templates/styleguide/panel.hbs
+++ b/app/templates/styleguide/panel.hbs
@@ -171,11 +171,11 @@
     <Auk::Panel::Body>
       <div class="au-c-form">
         <AuFormRow>
-          <Auk::Label>Label</Auk::Label>
+          <AuLabel>Label</AuLabel>
           <textarea class="auk-textarea" rows="2"></textarea>
         </AuFormRow>
         <AuFormRow>
-          <Auk::Label>Label</Auk::Label>
+          <AuLabel>Label</AuLabel>
           <textarea class="auk-textarea" rows="4"></textarea>
         </AuFormRow>
       </div>
