--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
@@ -3,7 +3,7 @@
     <div class="au-c-form">
       {{#if @subcase}}
         <AuFormRow>
-          <Auk::Label for="subcase-confidential">{{t "limited-access"}}</Auk::Label>
+          <AuLabel for="subcase-confidential">{{t "limited-access"}}</AuLabel>
           <AuToggleSwitch
             data-test-agendaitem-titles-edit-confidential={{true}}
             id="subcase-confidential"
@@ -13,9 +13,10 @@
         </AuFormRow>
       {{/if}}
       <AuFormRow>
-        <Auk::Label id="name-subcase">{{t "name-subcase"}}</Auk::Label>
+        <AuLabel for="name-subcase">{{t "name-subcase"}}</AuLabel>
         <Textarea
           data-test-agendaitem-titles-edit-shorttitle={{true}}
+          id="name-subcase"
           rows="2"
           aria-labelledby="name-subcase"
           class="auk-textarea"
@@ -23,9 +24,10 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label id="title-subcase">{{t "title-subcase"}}</Auk::Label>
+        <AuLabel for="title-subcase">{{t "title-subcase"}}</AuLabel>
         <Textarea
           data-test-agendaitem-titles-edit-title={{true}}
+          id="title-subcase"
           rows="4"
           aria-labelledby="title-subcase"
           class="auk-textarea"
@@ -33,9 +35,10 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label id="comment-title">{{t "comment-title"}}</Auk::Label>
+        <AuLabel for="comment-title">{{t "comment-title"}}</AuLabel>
         <Textarea
           data-test-agendaitem-titles-edit-comment={{true}}
+          id="comment-title"
           rows="2"
           aria-labelledby="comment-title"
           class="auk-textarea"
@@ -43,12 +46,13 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label id="private-comment-title">
+        <AuLabel for="private-comment-title">
           <Auk::Icon @name="lock-closed" @size="small" />
           {{t "private-comment-title"}}
-        </Auk::Label>
+        </AuLabel>
         <Textarea
           data-test-agendaitem-titles-edit-private-comment={{true}}
+          id="private-comment-title"
           rows="2"
           aria-labelledby="private-comment-title"
           class="auk-textarea"
@@ -57,9 +61,9 @@
       </AuFormRow>
       {{#if (is-announcement @agendaitem.type)}}
         <AuFormRow>
-          <Auk::Label for="item-show-in-newsletter">
+          <AuLabel for="item-show-in-newsletter">
             {{t "on-the-website"}}
-          </Auk::Label>
+          </AuLabel>
           {{#if this.newsItem}}
             <AuToggleSwitch
               data-test-agendaitem-titles-edit-showInNewsletter
