--- a/app/components/publications/publication/proofs/proof-info-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-info-panel.hbs
@@ -31,7 +31,7 @@
         <div class="auk-o-grid">
           <div class="auk-o-grid-col-3">
             <AuFormRow data-test-proof-info-panel-edit-due-date>
-              <Auk::Label>{{t "publication-flow-publication-due-date"}}</Auk::Label>
+              <AuLabel>{{t "publication-flow-publication-due-date"}}</AuLabel>
               <Auk::Datepicker
                 @date={{@publicationSubcase.dueDate}}
                 @onChange={{set @publicationSubcase "dueDate"}}
@@ -52,9 +52,9 @@
           </div>
           <div class="auk-o-grid-col-3">
             <AuFormRow>
-              <Auk::Label>
+              <AuLabel>
                 {{t "proofprint-corrector"}}
-              </Auk::Label>
+              </AuLabel>
               <AuInput
                 data-test-proof-info-panel-edit-corrector
                 value={{@publicationSubcase.proofPrintCorrector}}
