--- a/app/components/publications/publication/translations/translations-info-panel.hbs
+++ b/app/components/publications/publication/translations/translations-info-panel.hbs
@@ -31,7 +31,7 @@
         <div class="auk-o-grid">
           <div class="auk-o-grid-col-3">
             <AuFormRow data-test-publication-translations-info-panel-edit-due-date>
-              <Auk::Label>{{t "publication-flow-translation-due-date"}}</Auk::Label>
+              <AuLabel>{{t "publication-flow-translation-due-date"}}</AuLabel>
               <Auk::Datepicker
                 @date={{@translationSubcase.dueDate}}
                 @onChange={{set @translationSubcase "dueDate"}}
