--- a/app/components/subcase/bekrachtiging-description-panel/edit.hbs
+++ b/app/components/subcase/bekrachtiging-description-panel/edit.hbs
@@ -32,8 +32,8 @@
         </AuFieldset>
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label for="subcase-confidential">
-          {{t "limited-access"}}</Auk::Label>
+        <AuLabel for="subcase-confidential">
+          {{t "limited-access"}}</AuLabel>
         <AuToggleSwitch
           id="subcase-confidential"
           @checked={{@subcase.confidential}}
@@ -41,27 +41,29 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label id="short-title-subcase">
-          {{t "name-subcase"}}</Auk::Label>
+        <AuLabel for="short-title-subcase">
+          {{t "name-subcase"}}</AuLabel>
         <Textarea
           aria-labelledby="short-title-subcase"
+          id="short-title-subcase"
           rows="2"
           class="auk-textarea"
           @value={{@subcase.shortTitle}}
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label id="title-subcase">
-          {{t "title-subcase"}}</Auk::Label>
+        <AuLabel for="title-subcase">
+          {{t "title-subcase"}}</AuLabel>
         <Textarea
           aria-labelledby="title-subcase"
+          id="title-subcase"
           rows="4"
           class="auk-textarea"
           @value={{@subcase.title}}
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label>{{t "subcase-type-dropdown"}}</Auk::Label>
+        <AuLabel>{{t "subcase-type-dropdown"}}</AuLabel>
         <Utils::ModelSelector
           @modelName="subcase-type"
           @searchField="label"
@@ -72,7 +74,7 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label>{{t "subcase-name"}}</Auk::Label>
+        <AuLabel>{{t "subcase-name"}}</AuLabel>
         <AuInput
           @width="block"
           @value={{mut this.subcaseName}}
