--- a/app/components/subcase/description-panel/edit.hbs
+++ b/app/components/subcase/description-panel/edit.hbs
@@ -33,8 +33,8 @@
         </AuFieldset>
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label for="subcase-confidential">
-          {{t "limited-access"}}</Auk::Label>
+        <AuLabel for="subcase-confidential">
+          {{t "limited-access"}}</AuLabel>
         <AuToggleSwitch
           data-test-subcase-description-edit-confidential
           id="subcase-confidential"
@@ -43,10 +43,11 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label id="short-title-subcase">
-          {{t "name-subcase"}}</Auk::Label>
+        <AuLabel for="short-title-subcase">
+          {{t "name-subcase"}}</AuLabel>
         <Textarea
           data-test-subcase-description-edit-short-title
+          id="short-title-subcase"
           aria-labelledby="short-title-subcase"
           rows="2"
           class="auk-textarea"
@@ -54,10 +55,11 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label id="title-subcase">
-          {{t "title-subcase"}}</Auk::Label>
+        <AuLabel for="title-subcase">
+          {{t "title-subcase"}}</AuLabel>
         <Textarea
           data-test-subcase-description-edit-title
+          id="title-subcase"
           aria-labelledby="title-subcase"
           rows="4"
           class="auk-textarea"
@@ -65,7 +67,7 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label>{{t "subcase-type-dropdown"}}</Auk::Label>
+        <AuLabel>{{t "subcase-type-dropdown"}}</AuLabel>
         <Utils::ModelSelector
           data-test-subcase-description-edit-procedure-step
           @modelName="subcase-type"
@@ -77,7 +79,7 @@
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label>{{t "subcase-name"}}</Auk::Label>
+        <AuLabel>{{t "subcase-name"}}</AuLabel>
         <AuInput
           data-test-subcase-description-edit-procedure-name
           value={{this.subcaseName}}
