--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -13,9 +13,9 @@
       </div>
       <div class="au-c-card au-o-box au-o-box--small">
         <div class="au-c-form">
-          <Auk::Label class="au-u-padding-bottom-none">{{t "filter-on-last-seen"}}</Auk::Label>
+          <AuLabel class="au-u-padding-bottom-none">{{t "filter-on-last-seen"}}</AuLabel>
           <AuFormRow data-test-route-settings-user-date-from class="au-u-margin-top-tiny">
-            <Auk::Label>{{t "from"}}</Auk::Label>
+            <AuLabel>{{t "from"}}</AuLabel>
             <Auk::Datepicker
               @date={{this.dateFromBuffer}}
               @onChange={{set this "dateFromBuffer"}}
@@ -25,7 +25,7 @@
             />
           </AuFormRow>
           <AuFormRow data-test-route-settings-user-date-to class="au-u-margin-top-small">
-            <Auk::Label>{{t "until-inclusive"}}</Auk::Label>
+            <AuLabel>{{t "until-inclusive"}}</AuLabel>
             <Auk::Datepicker
               @date={{this.dateToBuffer}}
               @onChange={{set this "dateToBuffer"}}
